Fix Navigation to wrap

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ hr{
 .container-head {
 border: 1px solid none;
 display: flex;
-flex-wrap: wrap;
+flex-flow: row wrap;
 justify-content: flex-start;
 align-items: center;
 gap: 50px;
@@ -54,6 +54,7 @@ border: 1px solid none;
     display: flex;
     gap: 50px;
     align-items: center;
+    flex-flow: row wrap;
 }
 
 .main-nav > * {
